iptables.conf
#iptables for a bastion host in a DMZ with IP 172.16.1.5 
#iptables conf file can be found at /etc/sysconfig/iptables 


#Initialize firewall commands for Samba-host. Allow the explicitly defined INPUT and FORWARD packets for Samba-host
:Samba-host – [0:0]
-A INPUT -j Samba-host
-A FORWARD -j Samba-host
#Loopback address is opened. This is for troubleshooting and for proper software updating (Jang and Messier, p. 187, 2016)
-A Samba-host -i lo -j ACCEPT
#Port 22 must be opened to allow SSH
-A Samba-host -m state --state NEW-m tcp -p tcp --dport 22 -j ACCEPT
#Port 443 is opened to allow confidential web traffic connectivity
-A Samba-host -m state --state NEW-m tcp -p tcp --dport 443 -j ACCEPT
#Ports 137-139 must be opened for 172.16.0.0/12 to allow Samba file server functionality (Gite, 2017)
-A Samba-host -s 172.16.0.0/12 -m state --state NEW -p tcp --dport 137 -j ACCEPT
-A Samba-host -s 172.16.0.0/12 -m state --state NEW -p tcp --dport 138 -j ACCEPT
-A Samba-host -s 172.16.0.0/12 -m state --state NEW -p tcp --dport 139 -j ACCEPT
#Deny connections from all other ports
-A Samba-host -j REJECT –reject-with icmp-host-prohibited
COMMIT
